# blog-post-code

./: LICENSE  README.md
constraint-satisfaction/: csp.py  queens.py  scheduler.py  sudoku.py  toy.py
effective-encoding/: Cargo.toml  build.rs
effective-encoding/src/: main.rs  product.proto  product.rs  random.rs
eggs/: simulation.py
reinforced-elevator/: elevator.py  main.py  rflearner.py  toy.py
reinforced-elevator/models/: complex_elevator.pkl  simple_elevator.pkl
relative-brachistochrone/: animation.py  constants.py  helpers.py  main.py  plotters.py  readme.md  simulation.py
relative-brachistochrone/maneuvers/: complicated.csv  simple.csv
