[package]
name = "effective-encoding"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12"
prost-types = "0.12"
bytes = "1.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
rmp-serde = "1.1"
rkyv = "0.8.11"
rkyv_derive = "0.8.11"
ciborium = "0.2.2"
bincode = "2.0.1"
flatbuffers = "25.2.10"
# bson = "2.15"

[build-dependencies]
prost-build = "0.12"
